CHANGES.txt - 1.7.0 - 2013-07-26
--------------------------------

CHANGES IN CUPS V1.7.0

	- Fax queues did not work when shared via Bonjour
	  (<rdar://problem/14498310>)
	- Error messages from the scheduler were not localized using the
	  language specified in the client's IPP request
	  (<rdar://problem/14128011>)
	- Added an Italian localization (<rdar://problem/14481578>)
	- Fixed a couple memory leaks in ippfind that were reported by Clang.
	- Fixed a compile issue on 64-bit Linux with Clang - need to use the
	  -pie option instead of -Wl,-pie now (<rdar://problem/14480938>)
	- The ippfind utility reported the wrong port numbers when compiled
	  against Avahi (<rdar://problem/14508324>)
	- httpGetFd, httpGetFile, httpPutFd, and httpPutFile did not
	  automatically reconnect if the server closed the connecion after the
	  previous response.
	- Fixed a compile error in libcups (<rdar://problem/14467141>)
	- The scheduler incorrectly did not pass a FINAL_CONTENT_TYPE
	  environment variable to the filters or backend
	  (<rdar://problem/14355011>)
	- The cups-exec helper program could fail randomly on OS X due to
	  sandbox violations when closing excess file descriptors
	  (<rdar://problem/14421943>)
	- The scheduler incorrectly did not use the kqueue interface on OS X.


CHANGES IN CUPS V1.7rc1

	- Printer xxx-default values were not reported by Get-Printer-Attributes
	  or lpoptions (<rdar://problem/14401795>)
	- Fixed deprecation warnings for many functions on OS X so they are tied
	  to the deployment version when building (<rdar://problem/14210079>)
	- Fixed a build issue on ARM-based Linux systems - unable to validate
	  va_list arguments.
	- Added a new ippfind tool for finding IPP printers and other Bonjour
	  services (<rdar://problem/13876199>)
	- Fixed some issues with conversion of PWG media size names to
	  hundredths of millimeters (<rdar://problem/14065748>)
	- The IPP backend could crash on OS X when printing to a Kerberized