@@ -1,8 +1,10 @@
-CHANGES.txt - 1.7.0 - 2013-07-26
+CHANGES.txt - 1.7.0 - 2013-08-01
 --------------------------------
 
 CHANGES IN CUPS V1.7.0
 
+	- The scheduler did not respond using the hostname specified by the
+	  client (<rdar://problem/14583574>)
 	- Fax queues did not work when shared via Bonjour
 	  (<rdar://problem/14498310>)
 	- Error messages from the scheduler were not localized using the
